# Anomaly-Detector

./: AnomalyDetector.h  CLI.cpp  CLI.h  CMakeLists.txt  Command.cpp  Command.h  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  MainTrain.cpp  Server.cpp  Server.h  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  a.out  anomaly_detection_util.cpp  anomaly_detection_util.h  anomaly_detector_util.cpp  anomaly_detector_util.h  commands.h  minCircle.cpp  minCircle.h  output.txt  timeseries.cpp  timeseries.h
CSV THAT CAUSE ISSUES/: mainBU.txt  testFile1.csv  trainFile1.csv
